--- a/AccountATM.html
+++ b/AccountATM.html
@@ -78,6 +78,18 @@
       <button id="deleteButton2">Delete Account</button>
     </div>
 
+    <br />
+    <div>
+      <h4>Update Password Here</h4>
+      <span id="content5"></span>
+      <label for="update_passworduserInput">Enter Username</label>
+      <input id="update_passworduserInput" type="text" />
+      <label for="update_passwordpassInput">Enter Password</label>
+      <input id="update_passwordpassInput" type="text" />
+      <button id="updatePasswordButton">Update Password</button>
+    </div>
+
     <script src="AccountATM.js"></script>
   </body>
 </html>
+
